# autodmri

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: dockerhub.yml  python-package.yml  pythonpublish.yml
autodmri/: blocks.py  estimator.py  gamma.py  scripts.py
autodmri/tests/: test_blocks.py  test_gamma.py  test_script.py
datasets/: data_SENSE3_MB3_dwi.bval  data_SENSE3_MB3_dwi.bvec
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/source/: autodmri.rst  modules.rst
example/: README.md
scripts/: autodmri_get_distribution  get_distribution
