[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
description = 'Implementation of "Automated characterization of noise distributions in diffusion MRI data".'
name = "autodmri"
version = '0.2.6'
authors = [{ name = "Samuel St-Jean" }]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

dependencies = [
    'numpy>=1.10',
    'scipy>=0.19',
    'tqdm>=4.56',
    'joblib>=0.12',
    'nibabel>=2.2',
]

[project.scripts]
autodmri_get_distribution = "autodmri.scripts:main"

[project.urls]
homepage = "https://github.com/samuelstjean/autodmri"
documentation = "https://autodmri.readthedocs.io/en/latest/"
changelog = "https://github.com/samuelstjean/autodmri/blob/master/CHANGELOG.md"

[tool.setuptools]
packages = ["autodmri"]
